bezig met de voorbeelden
nog twee checken, en naa helmut sturen

--- a/variation.tex
+++ b/variation.tex
@@ -37,7 +37,7 @@ A similar avenue was pursued by \citealt{himmelreich2017}. She specific language
 The crucial difference with I'm doing is that I'm not relying on an arbitrary value I assigned to a language (say null head is active probe, probing only happens upwards). Instead, I look for patterns within the languages themselves, and let the facts of the headless relatives follow from those. To be more specific, I derive the different behaviors from relative pronouns. I decompose them, and I determine what parts of syntactic structure they correspond to. Having independently done that, I return to the headless relatives, and I derive the facts.
 
 
-\section{Both directions}
+\section{Internal and external case surface}
 
 \subsection{Gothic}
 
@@ -51,87 +51,85 @@ The crucial difference with I'm doing is that I'm not relying on an arbitrary va
 
 \subsection{Old High German}
 
-Consider the example in \ref{ex:ohg-dat-acc}. In this example, the internal case is accusative and the external case is dative.
-The internal case is nominative. The predicate \tit{zalta} `named' takes accusative objects.
-The external case is dative. The predicate \tit{furira} `older' takes dative objects.
-The relative pronoun \tit{thên} `\ac{rel}.\ac{dat}.\ac{pl}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
+In Old High German, both the internal and external case can surface, just like in Gothic. This conclusion follows from my own research in ANNIS. To the best of my knowledge, nobody never made this claim. Old High German is widely described as showing these type of headless relatives, but no claim has been made about whether only the internal case or also the external case can win.
 
-\exg. bistû furira Abrâhame, ouh thên \tbf{man} \tbf{hiar} \tbf{nû} \tbf{zalta}?\\
-{are you} older\scsub{[dat]} {Abraham} and \tsc{rel}.\ac{dat}.\tsc{pl} one here just named\scsub{[acc]}\\
-`are you really older than Abraham and (those) who have been mentioned here?' \flushfill{\ac{ohg}, \ac{otfrid} III 18:33, \pgcitealt{behaghel1923}{761}, after Delbrück}\label{ex:ohg-dat-acc}
-
-\exg. Bis tú nu {zi wáre} furira Ábrahame ? ouh thén man hiar nu zálta\\
- sein du nun,jetzt wahrlich erhabener,wertvoller Abraham ? auch,und der,die,das man hier nun,jetzt erzählen,verkünden\\
- `xxx' \flushfill{\ac{ohg}, \ac{otfrid} III 18:33}\label{ex:ohg-dat-acc-rep}
-
-Consider the example in \ref{ex:ohg-dat-nom}. In this example, the internal case is nominative and the external case is dative.
-The internal case is nominative. The predicate \tit{sprah} `spoke' takes nominative subjects.
-The external case is dative. The predicate \tit{antuurta} `replied' takes dative objects.
-The relative pronoun \tit{demo} `\ac{rel}.\ac{dat}.\ac{m}.\ac{sg}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
-
-\exg. enti aer antuurta demo \tbf{zaimo} \tbf{sprah}\\
-3\tsc{sg.m.nom} reply.\tsc{3sg}.\tsc{past}\scsub{[dat]} \tsc{rel}.\ac{dat}.\tsc{m}.\tsc{sg} 3\tsc{sg.m.dat} speak.\tsc{3sg}.\tsc{past}\scsub{[nom]}\\
-`he replied to the one who spoke to him' \flushfill{\ac{ohg}, \ac{mons} 7:24, adapted from \pgcitealt{pittner1995}{199}}\label{ex:ohg-dat-nom}
+The examples below follow the spelling and the detailed glosses in ANNIS. I adapted the translations from earlier secondary literature when available.
 
 Consider the example in \ref{ex:ohg-acc-nom}. In this example, the internal case is nominative and the external case is accusative.
-The internal case is nominative. The predicate \tit{chisetzit} `pull through' takes nominative subjects.
-The external case is accusative. The predicate \tit{bibringu} `bring to light' takes accusative objects.
+The internal case is nominative. The predicate \tit{gisizzen} `to possess' takes nominative subjects.
+The external case is accusative. The predicate \tit{bibringan} `to give rise to' takes accusative objects.
 The relative pronoun \tit{dhen} `\ac{rel}.\ac{acc}.\ac{m}.\ac{sg}' appears in the external case: the accusative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
 
-\exg. ``Ih bibringu fona iacobes samin endi fona iuda dhen mina berga chisitzit.''\\
-1\tsc{sg}.\tsc{nom} create.\tsc{1sg} from Jakob.\tsc{gen} Samuel.\tsc{dat} and from Judas.\tsc{abl} \tsc{rel}.\tsc{acc}.\tsc{m}.\tsc{sg} my.\tsc{acc}.\tsc{m}.\tsc{pl} mountain.\tsc{acc}.\tsc{pl} possess.3\tsc{sg}\\
-`I create from Samuel of Jakob and from Judas him who possesses my mountains.' \flushfill{\ac{ohg}, \ac{isid} 34:3, adapted from \pgcitealt{behaghel1923}{761}}\label{ex:ohg-acc-nom}
-%maybe there is an alternative
+%%the voice of god speaks through jesaja:
 
-`I bright to light the one who wanders through my mountains about Jacob and end of Judas'
+\exg. ``Ih bibringu (fona iacobes samin endi fona iuda) dhen mina berga chisitzit.''\\
+1\tsc{sg}.\tsc{nom} {give rise to/send}.\tsc{1sg} from Jakob.\tsc{gen} Samuel.\tsc{dat} and from Judas.\tsc{abl} \tsc{rel}.\tsc{acc}.\tsc{m}.\tsc{sg} my.\tsc{acc}.\tsc{m}.\tsc{pl} mountain.\tsc{acc}.\tsc{pl} possess.3\tsc{sg}\\
+`I give rise to (from Samuel of Jakob and from Judas) him who possesses my mountains.' \flushfill{\ac{ohg}, \ac{isid} 34:3, adapted from \pgcitealt{behaghel1923}{761}}\label{ex:ohg-acc-nom}
 
+Consider the example in \ref{ex:ohg-dat-nom}. In this example, the internal case is nominative and the external case is dative.
+The internal case is nominative. The predicate \tit{sprehhan} `to speak' takes nominative subjects.
+The external case is dative. The predicate \tit{antwurten} `to reply' takes dative objects.
+The relative pronoun \tit{demo} `\ac{rel}.\ac{dat}.\ac{m}.\ac{sg}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
 
+\exg. Enti aer {ant uurta} demo \tbf{zaimo} \tbf{sprah}, quad:\\
+and 3\tsc{sg.m.nom} reply.\tsc{3sg}.\tsc{past}\scsub{[dat]} \tsc{rel}.\ac{dat}.\tsc{m}.\tsc{sg} {to 3\tsc{sg.m.dat}} speak.\tsc{3sg}.\tsc{past}\scsub{[nom]} say.\tsc{past}.\tsc{3sg}\\
+`And he replied to the one who spoke to him, he said:' \flushfill{\ac{ohg}, \ac{mons} 7:24, adapted from \pgcitealt{pittner1995}{199}}\label{ex:ohg-dat-nom}
 
+Consider the example in \ref{ex:ohg-dat-acc}. In this example, the internal case is accusative and the external case is dative.
+The internal case is nominative. The predicate \tit{zellen} `to report' takes accusative objects.
+The external case is dative. The comparative of the adjective \tit{furiro} `great' takes dative objects.
+The relative pronoun \tit{thên} `\ac{rel}.\ac{dat}.\ac{pl}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
+
+\exg. Bistú nu {zi wáre} furira Ábrahame? ouh thén man hiar nu zálta joh sie álle tod bifálta?\\
+{be.2\tsc{sg} \tsc{2sg.nom}} now really {great}.\tsc{com}\scsub{[dat]} Abraham.\tsc{dat} and \tsc{rel}.\ac{dat}.\tsc{m}.\tsc{pl} one.\tsc{m.sg.nom} here now report.\tsc{past}.\tsc{3sg}\scsub{[acc]}
+and \tsc{3pl}.\tsc{acc} all.\tsc{3pl}.\tsc{acc} death.\tsc{nom}.\tsc{sg} attack.\tsc{past}.\tsc{3sg}\\
+`Are you now really greater than Abraham? And than those who one reported here now and death attacked them all?' \flushfill{\ac{ohg}, \ac{otfrid} III 18:33}\label{ex:ohg-dat-acc}
 
 Consider the example in \ref{ex:ohg-nom-acc}. In this example, the internal case is accusative and the external case is nominative.
-The internal case is accusative. The predicate \tit{zéllent} `to tell' takes accusative objects.
-The external case is nominative. The predicate \tit{ist} `to be' takes nominative objects.
+The internal case is accusative. The predicates \tit{zellen} `to tell' and \tit{slahan} `to kill' takes accusative objects.
+The external case is nominative. The predicate \tit{sin} `to be' takes nominative objects.
 The relative pronoun \tit{then} `\ac{rel}.\ac{acc}.\ac{m}.\ac{sg}' appears in the internal case: the accusative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
 
-\exg. thíz ist \tbf{then sie zéllent} joh \tbf{then sie sláhan wollent}!\\
+\exg. thíz ist \tbf{then} \tbf{sie} \tbf{zéllent} \tbf{joh} \tbf{then} \tbf{sie} \tbf{sláhan} \tbf{wollent}!\\
 this.\tsc{nom} be.3\tsc{sg}\scsub{[nom]} \tsc{rel}.\tsc{acc}.\tsc{m}.\tsc{sg} \tsc{3pl}.\tsc{masc}.\tsc{nom} tell.\tsc{3pl}\scsub{[acc]}
 and \tsc{rel}.\tsc{acc}.\tsc{m}.\tsc{sg} \tsc{3pl}.\tsc{masc}.\tsc{nom} kill\scsub{[acc]} want.\tsc{3pl}\\
-`This is the one whom they talk about and whom they want to kill.' \flushfill{\ac{ohg}, ?}\label{ex:ohg-nom-acc}
+`This is the one whom they talk about and whom they want to kill.' \flushfill{\ac{ohg}, Otfrid}\label{ex:ohg-nom-acc}
 
 Consider the example in \ref{ex:ohg-nom-dat}. In this example, the internal case is dative and the external case is nominative.
 The internal case is dative. The predicate \tit{forlazan} `to read' takes dative indirect objects.
-The external case is nominative. The predicate \tit{minnot} `to love' takes nominative subjects.
+The external case is nominative. The predicate \tit{minnon} `to love' takes nominative subjects.
 The relative pronoun \tit{themo} `\ac{rel}.\ac{dat}.\ac{m}.\ac{sg}' appears in the internal case: the dative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
 
-\exg. \tbf{themo min uuirdit forlazan}, min minnot\\
-\tsc{rel}.\tsc{dat}.\tsc{m}.\tsc{sg} less become\scsub{[dat]} read less love\scsub{[nom]}\\
-`To whom less is read, loves less.' \flushfill{\ac{ohg}, ?}\label{ex:ohg-nom-dat}
+\exg. \tbf{themo} \tbf{min} \tbf{uuirdit} \tbf{forlazan}, min minnot\\
+\tsc{rel}.\tsc{dat}.\tsc{m}.\tsc{sg} less become.\tsc{3sg} read\scsub{[dat]} less love.\tsc{3sg}\scsub{[nom]}\\
+`To whom less is read, loves less.' \flushfill{\ac{ohg}, Tatian}\label{ex:ohg-nom-dat}
 
 Consider the example in \ref{ex:ohg-acc-dat}. In this example, the internal case is dative and the external case is nominative.
-The internal case is dative. The predicate \tit{forlazan} `to read' takes dative indirect objects.
+The internal case is dative. The predicate \tit{gituon} `to do' takes dative indirect objects.
 The external case is nominative. The predicate \tit{minnot} `to love' takes nominative subjects.
 The relative pronoun \tit{themo} `\ac{rel}.\ac{dat}.\ac{m}.\ac{sg}' appears in the internal case: the dative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
 
+
+%%%check whether thingy really had this as an example that does this
+
 \exg. Themo avur tház ni gidúat, quimit séragaz muat, joh wónot inan úbari gotes ábulgi!\\
-\tsc{rel}.\tsc{dat}.\tsc{m}.\tsc{sg} against \tsc{dem}.\tsc{acc}.\tsc{n}.\tsc{sg} not do.3\tsc{sg} kommen/herankommen/zurück-.3\tsc{sg} sad.\tsc{nom}.\tsc{sg} heart.\tsc{nom}.\tsc{sg} and live.3\tsc{sg} 3.\tsc{sg}.\tsc{m}.\tsc{acc} über god.\tsc{gen}.\tsc{sg} rage.\tsc{sg}\\
-`He does not do that to him, who the sad heart comes and lives him over God's rage.' \flushfill{\ac{ohg}, ?}\label{ex:ohg-acc-dat}
+\tsc{rel}.\tsc{dat}.\tsc{m}.\tsc{sg} but \tsc{dem}.\tsc{acc}.\tsc{n}.\tsc{sg} not do.3\tsc{sg} come.3\tsc{sg} sad.\tsc{nom}.\tsc{sg} heart.\tsc{nom}.\tsc{sg}
+and live.3\tsc{sg} 3.\tsc{sg}.\tsc{m}.\tsc{acc} over god.\tsc{gen}.\tsc{sg} rage.\tsc{sg}\\
+`He does not do that to him, who the sad heart comes, and he lives in God's rage.' \flushfill{\ac{ohg}, Otfrid}\label{ex:ohg-acc-dat}
 
+%eerst rel, dan mc
+%seele = nom
 
-Otfr.Ev.2.13.37
+Consider the example in \ref{ex:ohg-counterexample}. In this example, the internal case is nominative and the external case is accusative. Surprisingly, the relative pronoun appears in the case lower on the case scale.
+The internal case is nominative. The predicate \tit{giheilen} `to save' takes nominative subjects.
+The external case is accusative. The predicate \tit{beran} `to bear' takes accusative objects.
+The relative pronoun \tit{thér} `\ac{rel}.\ac{nom}.\ac{m}.\ac{sg}' appears in the internal case: the nominative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
 
-eerst rel, dan mc
-seele = nom
+\exg. tház si uns béran scolti \tbf{thér} \tbf{unsih} \tbf{gihéilti}\\
+ that 3\tsc{sg.f.nom} 1\tsc{pl.dat} bear should.\tsc{subj}.\tsc{past}.\tsc{3sg} \tsc{rel}.\tsc{nom}.\tsc{m}.\tsc{sg} 1\tsc{pl.acc} save.\tsc{subj.past}.\tsc{3sg}\\
+ `that she should bear for us him who will save us' \flushfill{\ac{ohg}, \ac{otfrid}}\label{ex:ohg-counterexample}
 
-
-\footnote{
-COUNTEREXAMPLE: int: nom, ext: acc
-
-\exg. tház si uns béran scolti thér unsih gihéilti\\
-dass sieFEM.SG.NOM.3 wirPL.DAT.1 (hervor)bringen,gebären sollen,werdenSUBJ.PAST.SG.3 derMASC.SG.NOM wirPL.ACC.1 rettenSUBJ.PAST.SG.3\\
- `xxx' \flushfill{\ac{ohg}, \ac{otfrid}}
-
- \phantom{x}
-}
+hoi
 
 \section{Only internal}
 
