ohg so far ready
naar helmut

--- a/fenna-files/abbreviations.sty
+++ b/fenna-files/abbreviations.sty
@@ -263,6 +263,12 @@
   class = texts
 }
 
+\DeclareAcronym{tatian}{
+  short = Tatian ,
+  long  = Tatian ,
+  class = texts
+}
+
 \DeclareAcronym{nib}{
   short = Nib. ,
   long  = Das Nibelungenlied ,
