--- a/variation.tex
+++ b/variation.tex
@@ -51,20 +51,28 @@ The crucial difference with I'm doing is that I'm not relying on an arbitrary va
 
 \subsection{Old High German}
 
-In Old High German, both the internal and external case can surface, just like in Gothic. This conclusion follows from my own research in ANNIS. To the best of my knowledge, nobody never made this claim. Old High German is widely described as showing these type of headless relatives, but no claim has been made about whether only the internal case or also the external case can win.
+% Old High German is widely discussed in the literature because of its case attraction (references).
+%
+% \ex. example case attraction
+%
+% by extension, examples with external case surfacing in headless relatives are also discussed
+% to the best of my knowledge, there is no systematic study of direction: int to ext or ext to int
 
-The examples below follow the spelling and the detailed glosses in ANNIS. I adapted the translations from earlier secondary literature when available.
+Old High German shows the same pattern as Gothic. The relative pronoun can surface in the internal or the external case, depending on which case is more to the right on the case scale. This conclusion follows from my own research of the texts Der althochdeutsche Isidor, The Monsee fragments, Otfrid's Evangelienbuch and Tatian in ANNIS3.\footnote{
+https://korpling.german.hu-berlin.de/annis3/
+} The examples below follow the spelling and the detailed glosses in ANNIS3. The translations are my own.
 
 Consider the example in \ref{ex:ohg-acc-nom}. In this example, the internal case is nominative and the external case is accusative.
 The internal case is nominative. The predicate \tit{gisizzen} `to possess' takes nominative subjects.
 The external case is accusative. The predicate \tit{bibringan} `to give rise to' takes accusative objects.
 The relative pronoun \tit{dhen} `\ac{rel}.\ac{acc}.\ac{m}.\ac{sg}' appears in the external case: the accusative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
 
-%%the voice of god speaks through jesaja:
+% Context: the voice of God speaks through him (I think Jesaja):
 
-\exg. ``Ih bibringu (fona iacobes samin endi fona iuda) dhen mina berga chisitzit.''\\
-1\tsc{sg}.\tsc{nom} {give rise to/send}.\tsc{1sg} from Jakob.\tsc{gen} Samuel.\tsc{dat} and from Judas.\tsc{abl} \tsc{rel}.\tsc{acc}.\tsc{m}.\tsc{sg} my.\tsc{acc}.\tsc{m}.\tsc{pl} mountain.\tsc{acc}.\tsc{pl} possess.3\tsc{sg}\\
-`I give rise to (from Samuel of Jakob and from Judas) him who possesses my mountains.' \flushfill{\ac{ohg}, \ac{isid} 34:3, adapted from \pgcitealt{behaghel1923}{761}}\label{ex:ohg-acc-nom}
+\exg. ``Ih bibringu fona iacobes samin endi fona iuda dhen \tbf{mina} \tbf{berga} \tbf{chisitzit}.''\\
+1\tsc{sg}.\tsc{nom} {give rise to/send}.\tsc{1sg}\scsub{[acc]} from Jakob.\tsc{gen} Samuel.\tsc{dat} and from Judas.\tsc{abl} \tsc{rel}.\tsc{acc}.\tsc{m}.\tsc{sg} my.\tsc{acc}.\tsc{m}.\tsc{pl} mountain.\tsc{acc}.\tsc{pl} possess.3\tsc{sg}\scsub{[nom]}\\
+`I give rise to from Samuel of Jakob and from Judas him who possesses my mountains.' \flushfill{\ac{ohg}, \ac{isid} 34:3}\label{ex:ohg-acc-nom}\\
+% Lat `Educam de Iacob semine et de Iuda possedentem montes meos.'
 
 Consider the example in \ref{ex:ohg-dat-nom}. In this example, the internal case is nominative and the external case is dative.
 The internal case is nominative. The predicate \tit{sprehhan} `to speak' takes nominative subjects.
@@ -80,7 +88,7 @@ The internal case is nominative. The predicate \tit{zellen} `to report' takes ac
 The external case is dative. The comparative of the adjective \tit{furiro} `great' takes dative objects.
 The relative pronoun \tit{thên} `\ac{rel}.\ac{dat}.\ac{pl}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
 
-\exg. Bistú nu {zi wáre} furira Ábrahame? ouh thén man hiar nu zálta joh sie álle tod bifálta?\\
+\exg. Bistú nu {zi wáre} furira Ábrahame? Ouh thén \tbf{man} \tbf{hiar} \tbf{nu} \tbf{zálta} joh sie álle tod bifálta?\\
 {be.2\tsc{sg} \tsc{2sg.nom}} now really {great}.\tsc{com}\scsub{[dat]} Abraham.\tsc{dat} and \tsc{rel}.\ac{dat}.\tsc{m}.\tsc{pl} one.\tsc{m.sg.nom} here now report.\tsc{past}.\tsc{3sg}\scsub{[acc]}
 and \tsc{3pl}.\tsc{acc} all.\tsc{3pl}.\tsc{acc} death.\tsc{nom}.\tsc{sg} attack.\tsc{past}.\tsc{3sg}\\
 `Are you now really greater than Abraham? And than those who one reported here now and death attacked them all?' \flushfill{\ac{ohg}, \ac{otfrid} III 18:33}\label{ex:ohg-dat-acc}
@@ -93,7 +101,7 @@ The relative pronoun \tit{then} `\ac{rel}.\ac{acc}.\ac{m}.\ac{sg}' appears in th
 \exg. thíz ist \tbf{then} \tbf{sie} \tbf{zéllent} \tbf{joh} \tbf{then} \tbf{sie} \tbf{sláhan} \tbf{wollent}!\\
 this.\tsc{nom} be.3\tsc{sg}\scsub{[nom]} \tsc{rel}.\tsc{acc}.\tsc{m}.\tsc{sg} \tsc{3pl}.\tsc{masc}.\tsc{nom} tell.\tsc{3pl}\scsub{[acc]}
 and \tsc{rel}.\tsc{acc}.\tsc{m}.\tsc{sg} \tsc{3pl}.\tsc{masc}.\tsc{nom} kill\scsub{[acc]} want.\tsc{3pl}\\
-`This is the one whom they talk about and whom they want to kill.' \flushfill{\ac{ohg}, Otfrid}\label{ex:ohg-nom-acc}
+`This is the one whom they talk about and whom they want to kill.' \flushfill{\ac{ohg}, \ac{otfrid} III 16:50}\label{ex:ohg-nom-acc}
 
 Consider the example in \ref{ex:ohg-nom-dat}. In this example, the internal case is dative and the external case is nominative.
 The internal case is dative. The predicate \tit{forlazan} `to read' takes dative indirect objects.
@@ -102,34 +110,33 @@ The relative pronoun \tit{themo} `\ac{rel}.\ac{dat}.\ac{m}.\ac{sg}' appears in t
 
 \exg. \tbf{themo} \tbf{min} \tbf{uuirdit} \tbf{forlazan}, min minnot\\
 \tsc{rel}.\tsc{dat}.\tsc{m}.\tsc{sg} less become.\tsc{3sg} read\scsub{[dat]} less love.\tsc{3sg}\scsub{[nom]}\\
-`To whom less is read, loves less.' \flushfill{\ac{ohg}, Tatian}\label{ex:ohg-nom-dat}
+`To whom less is read, loves less.' \flushfill{\ac{ohg}, \ac{tatian} 138:13}\label{ex:ohg-nom-dat}
 
-Consider the example in \ref{ex:ohg-acc-dat}. In this example, the internal case is dative and the external case is nominative.
+Consider the example in \ref{ex:ohg-acc-dat}. In this example, the internal case is dative and the external case is accusative.
 The internal case is dative. The predicate \tit{gituon} `to do' takes dative indirect objects.
-The external case is nominative. The predicate \tit{minnot} `to love' takes nominative subjects.
+The external case is nominative. The predicate \tit{queman} `to come' takes nominative subjects.
 The relative pronoun \tit{themo} `\ac{rel}.\ac{dat}.\ac{m}.\ac{sg}' appears in the internal case: the dative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
 
+% Previous sentence: \tit{Ther mán sih thaz gilérit,thia gilóuba in ínan kerit --giduat er húgu sinan in éwon filu blídan;}
+% ``the man teaches himself that, he focusses on the belief in himself, he does his own belief forever with a lot of enthusiasm.''
 
-%%%check whether thingy really had this as an example that does this
-
-\exg. Themo avur tház ni gidúat, quimit séragaz muat, joh wónot inan úbari gotes ábulgi!\\
-\tsc{rel}.\tsc{dat}.\tsc{m}.\tsc{sg} but \tsc{dem}.\tsc{acc}.\tsc{n}.\tsc{sg} not do.3\tsc{sg} come.3\tsc{sg} sad.\tsc{nom}.\tsc{sg} heart.\tsc{nom}.\tsc{sg}
+\exg. \tbf{Themo} \tbf{avur} \tbf{tház} \tbf{ni} \tbf{gidúat}, quimit séragaz muat, joh wónot inan úbari gotes ábulgi!\\
+\tsc{rel}.\tsc{dat}.\tsc{m}.\tsc{sg} but \tsc{dem}.\tsc{acc}.\tsc{n}.\tsc{sg} not do.3\tsc{sg}\scsub{[dat?]} come.3\tsc{sg}\scsub{[acc?]} sad.\tsc{nom}.\tsc{sg} heart.\tsc{nom}.\tsc{sg}
 and live.3\tsc{sg} 3.\tsc{sg}.\tsc{m}.\tsc{acc} over god.\tsc{gen}.\tsc{sg} rage.\tsc{sg}\\
-`He does not do that to him, who the sad heart comes, and he lives in God's rage.' \flushfill{\ac{ohg}, Otfrid}\label{ex:ohg-acc-dat}
+`But he does not do that to him, the sad heart comes him, and he lives in God's rage!' \flushfill{\ac{ohg}, \ac{otfrid} II 3:37}\label{ex:ohg-acc-dat}
 
-%eerst rel, dan mc
-%seele = nom
-
+There is a counterexample.
 Consider the example in \ref{ex:ohg-counterexample}. In this example, the internal case is nominative and the external case is accusative. Surprisingly, the relative pronoun appears in the case lower on the case scale.
 The internal case is nominative. The predicate \tit{giheilen} `to save' takes nominative subjects.
 The external case is accusative. The predicate \tit{beran} `to bear' takes accusative objects.
 The relative pronoun \tit{thér} `\ac{rel}.\ac{nom}.\ac{m}.\ac{sg}' appears in the internal case: the nominative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
 
 \exg. tház si uns béran scolti \tbf{thér} \tbf{unsih} \tbf{gihéilti}\\
- that 3\tsc{sg.f.nom} 1\tsc{pl.dat} bear should.\tsc{subj}.\tsc{past}.\tsc{3sg} \tsc{rel}.\tsc{nom}.\tsc{m}.\tsc{sg} 1\tsc{pl.acc} save.\tsc{subj.past}.\tsc{3sg}\\
- `that she should bear for us him who will save us' \flushfill{\ac{ohg}, \ac{otfrid}}\label{ex:ohg-counterexample}
+ that 3\tsc{sg.f.nom} 1\tsc{pl.dat} bear\scsub{[acc]} should.\tsc{subj}.\tsc{past}.\tsc{3sg} \tsc{rel}.\tsc{nom}.\tsc{m}.\tsc{sg} 1\tsc{pl.acc} save.\tsc{subj.past}.\tsc{3sg}\scsub{[nom]}\\
+ `that she should bear for us him who will save us' \flushfill{\ac{ohg}, \ac{otfrid} I 3:38}\label{ex:ohg-counterexample}
 
-hoi
+\phantom{x}
+
 
 \section{Only internal}
 
