--- a/thesis.tex
+++ b/thesis.tex
@@ -42,10 +42,10 @@
 \include{recurring-pattern}
 \include{case-decomposition}
 
-
-\part{``Relative'' pronouns}\label{part:direction}
-\include{variation}
-\include{relativization}
+\part{The variation}\label{part:direction}
+\include{two-attested-patterns}
+\include{d-vs-wh}
+\include{going-into-detail}
 
 \part{Stuff}\label{part:stuff}
 \include{stuff}
