--- a/two-attested-patterns.tex
+++ b/two-attested-patterns.tex
@@ -1,6 +1,6 @@
 % !TEX root = thesis.tex
 
-\chapter{The variation}
+\chapter{Two attested patterns}
 
 I showed that headless relatives crosslinguistically make reference to the case scale: if two cases are in competition, it is always the same that wins.
 However, there is a second aspect to headless relatives, which differs across languages. That is, sometimes the case competition does not even take place, or rather, there is no winner to the competition. I show that whether is not the case competition takes place depends on the type of relative pronoun that is used. I distinguish two types of relative pronouns: \tsc{wh}-pronouns and \tsc{d}-pronouns.
@@ -37,9 +37,10 @@ A similar avenue was pursued by \citealt{himmelreich2017}. She specific language
 The crucial difference with I'm doing is that I'm not relying on an arbitrary value I assigned to a language (say null head is active probe, probing only happens upwards). Instead, I look for patterns within the languages themselves, and let the facts of the headless relatives follow from those. To be more specific, I derive the different behaviors from relative pronouns. I decompose them, and I determine what parts of syntactic structure they correspond to. Having independently done that, I return to the headless relatives, and I derive the facts.
 
 
-\section{Internal and external case surface}
+\section{Headless relatives}
 
-\subsection{Gothic}
+\subsection{Both}
+\subsubsection{Gothic}
 
 \begin{table}[H]
   \center
@@ -49,7 +50,7 @@ The crucial difference with I'm doing is that I'm not relying on an arbitrary va
 \end{table}
 
 
-\subsection{Old High German}
+\subsubsection{Old High German}
 
 % Old High German is widely discussed in the literature because of its case attraction (references).
 %
@@ -138,7 +139,7 @@ The relative pronoun \tit{thér} `\ac{rel}.\ac{nom}.\ac{m}.\ac{sg}' appears in t
 \phantom{x}
 
 
-\section{Only internal}
+\subsection{Only internal}
 
 In \ac{mg}, only internal case can win.
 
@@ -235,7 +236,7 @@ To summarize
 \end{table}
 
 
-\section{Other languages}
+\subsection{Other languages}
 
 
 
@@ -248,17 +249,25 @@ To summarize
 % found in Mk 10:32, Luk 3:13, Rom 14:19, II Cor 8:11, Col 3:2, and elsewhere.
 
 
+What does not exist: external only
+
+Something that comes close:
 
 Old English, Old Icelandic both show: \tsc{d}-pronoun plus invariant relativizer + always take case from the main clause
 
 Ancient Greek also actually has both directions (see \cite{vanriemsdijk2006}), so there is actually not a language with external only + hierarchy effects
 
 
+And to complete the picture, there are languages in which nothing goes:
+
 Polish and Italian have \tsc{wh}-pronouns but do not allow for conflicts
 
 
 
-\section{Generalizations}
+
+\section{Relative pronouns}
+
+Is there any other observable difference between the languages? Yes! The shape of the relative pronouns.
 
 This will be intuition later
 
@@ -267,9 +276,6 @@ This will be intuition later
   \item with \tsc{wh} morphology, the internal case can win
   \item with \tsc{d} morphology (or is it when the relative pronoun can take a complement?), both the external and the internal can win
 \end{itemize}
-
-
-\section{Relative pronouns}
 
 
 \begin{table}[H]
