--- a/d-vs-wh.tex
+++ b/d-vs-wh.tex
@@ -1,6 +1,6 @@
 % !TEX root = thesis.tex
 
-\chapter{Relativization}\label{ch:relativization}
+\chapter{\tsc{d} vs. \tsc{wh}}\label{ch:relativization}
 
 So, we have seen that relative pronouns are sensitive to the internal case and to the external case. In this chapter we go back to what this means for the `head' in headless relatives. In headless relatives this head is namely missing. Like I said in the introduction, there are several ways of interpreting that.
 
@@ -11,7 +11,9 @@ I connect this behavior of Modern German headless relatives to the shape of its 
 In both types of languages, I analyze it as if there was a head, but it is phonologically empty/deleted. I show that this allows me to make a distinction between German and languages like Polish, that do not allow for the case competition as German does. OHG and Gothic also independently show that they can be derived from a double element structure.
 
 
-\section{Modern German}
+
+
+\section{\tsc{wh}-relatives}
 
 I show in this section that even though the relative pronoun is sensitive to both the internal and external case, syntactically it is part of the relative clause. As a mechanism to also take the external case into account I introduce an external head.
 
@@ -125,6 +127,7 @@ Jan like.3\tsc{sg}\scsub{[acc]} \tsc{rel}.\tsc{dat}.\tsc{sg}.\tsc{an} ever tease
  `Jan trusts whoever he let into the house.'
 
 
+\subsection{The missing external head}
 
 I propose a single answer to both of these questions: there is an external head. This is the head of the relative clause, and it is deleted in Modern German (as long as it is smaller than the relative pronoun). This external head in Polish is not deleted: it does not add any extra definiteness or indefiniteness. Before I show how this works exactly, I show some independent evidence for assuming that there is this head.
 
@@ -263,7 +266,7 @@ But here it does not.
 \end{forest}
 
 
-
+\subsection{Excluding Polish}
 
 
 But if we follow the logic I just sketched, I expect all languages that have \tsc{wh}-pronouns as relative pronouns to allow for letting the internal case win in case competition. This prediction is incorrect.
@@ -307,7 +310,7 @@ Finnish is like German because its light-headed relatives also add some definite
 
 
 
-\section{OHG and Gothic}
+\section{\tsc{d}-relatives}
 
 relative clause more complex: second head like in MG, deletion there
 
@@ -399,361 +402,3 @@ Now the relative clause is built first again, this time only including the nomin
 So, this seems to work fine. The assumptions you have to do in order to make this are the following. First, case is complex. Second, you can remerge an embedded node (grafting). For the first one I have argued in Chapter \ref{ch:decomposition}. The second one could use some additional argumentation. It is a mix between internal remerge (move) and external merge, namely external remerge. Other literature on multidominance and grafting, other phenomena. Problems: linearization, .. But even if fix all these theoretical problems, there is an empirical one.
 
 That is, I want to connect this behavior of Modern German headless relatives to the shape of its relative pronouns. These pronouns are \tsc{wh}-elements. The OHG and Gothic ones are not \tsc{wh}, they are \tsc{d}. Their relative pronouns look different, and so their headless relatives can also behave differently.
-
-
-
-
-\chapter{Step by step derivations}
-
-\section{Background}
-
-\ex. \tbf{Spellout Algorithm:}\\
-Merge F and \label{ex:spellout}
- \a. Spell out FP.
- \b. If (a) fails, attempt movement of the spec of the complement of \tsc{f}, and retry (a).
- \b. If (b) fails, move the complement of \tsc{f}, and retry (a).
-
-When a new match is found, it overrides previous spellouts.
-
-\ex. \tbf{Cyclic Override} \citep{starke2018}:\\
-Lexicalisation at a node XP overrides any previous match at a phrase contained in XP.
-
-If the spellout procedure in \ref{ex:spellout} fails, backtracking takes place.
-
-\ex. \tbf{Backtracking} \citep{starke2018}:\\
-When spellout fails, go back to the previous cycle, and try the next option for that cycle.\label{ex:backtracking}
-
-If backtracking also does not help, a specifier is constructed.
-
-\ex. \tbf{Spec Formation} \citep{starke2018}:\\
-If Merge F has failed to spell out (even after backtracking), try to spawn a new derivation providing the feature F and merge that with the current derivation, projecting the feature F at the top node.\label{ex:specformation}
-
-\ex. Merge F, Move XP, Merge XP
-
-\phantom{hi}
-
-
-
-\section{Derivations for German}
-
-\exg. Uns besucht \tbf{wen} \tbf{Maria} \tbf{mag}.\\
- we.\ac{acc} visit.3\ac{sg}\scsub{[nom]} \tsc{rel}.\ac{acc}.\tsc{an} Maria.\ac{nom} like.3\ac{sg}\scsub{[acc]}\\
- `Who visits us, Maria likes.' \flushfill{adapted from \pgcitealt{vogel2001}{343}}
-
-Internal structure of the relative clause.
-
-\tit{w} got merged as a complex spec. \tsc{f1} and \tsc{f2} ended up there via backtracking: taking \tit{w} off, spec to spec movement, and spelling it out with the suffix.
-
-\ex.
-\begin{forest} boom
-[, s sep=50mm
-    [\tsc{relP}, s sep=20mm
-        [\tit{w}, roof]
-        [, s sep=30mm
-            [\tsc{deix}P,
-            tikz={
-            \node[label=below:\tit{e},
-            draw,circle,
-            scale=0.875,
-            fit to=tree]{};
-            }
-                [\tsc{deix}]
-                [\tsc{refP}
-                    [\tsc{ref2}]
-                    [\tsc{ref1}]
-                ]
-            ]
-            [\tsc{acc}P,
-            tikz={
-            \node[label=below:\tit{n},
-            draw,circle,
-            scale=0.925,
-            fit to=tree]{};
-            }
-                [\tsc{f2}]
-                [\tsc{nom}P
-                    [\tsc{f1}]
-                    [\tsc{num}P
-                        [\tsc{num}]
-                        [\tsc{m}P
-                            [\tsc{m}]
-                            [\tsc{n}P
-                                [\tsc{n}]
-                                [\tsc{persP}
-                                    [\tsc{pers}]
-                                ]
-                            ]
-                        ]
-                    ]
-                ]
-            ]
-        ]
-    ]
-    [VP
-       [\tit{Maria mag}, roof]
-    ]
-]
-\end{forest}
-
-Structure of the relative clause + the external head that is going to be deleted.
-
-Case is merged above the relative clause. Backtracking takes place, meaning that the relative clause and the head are going to be split up again. Then it can be spelled out with the suffix of the head after spec-to-spec movement.
-
-\ex.
-\begin{forest} boom
-[\tsc{nom}P
-    [\tsc{f1}]
-        [, s sep=15mm
-        [CP
-            [\tsc{relP}
-                [\tit{w}, roof]
-                [
-                    [\tit{e}, roof]
-                    [\tit{n}, roof]
-                ]
-            ]
-            [VP
-               [\tit{Maria mag}, roof]
-            ]
-        ]
-        [, s sep=30mm
-            [\tsc{deix}P,
-        	  tikz={
-        	  \node[label=below:\tit{e},
-        	  draw,circle,
-        	  scale=0.875,
-        	  fit to=tree]{};
-            }
-                [\tsc{deix}]
-                [\tsc{refP}
-                    [\tsc{ref2}]
-                    [\tsc{ref1}]
-                ]
-            ]
-            [\tsc{num}P,
-        	  tikz={
-        	  \node[label=below:\tit{r},
-        	  draw,circle,
-        	  scale=0.9,
-        	  fit to=tree]{};
-            }
-                [\tsc{num}]
-                [\tsc{m}P
-                    [\tsc{m}]
-                    [\tsc{n}P
-                        [\tsc{n}]
-                        [\tsc{persP}
-                            [\tsc{pers}]
-                        ]
-                    ]
-                ]
-            ]
-        ]
-    ]
-]
-\end{forest}
-
-
-\section{German deletion}
-
-
-So German relative pronoun:
-
-\begin{forest} boom
-[\tsc{relP}, s sep=20mm
-    [\tit{w}, roof]
-    [, s sep=30mm
-        [\tsc{deix}P,
-        tikz={
-        \node[label=below:\tit{e},
-        draw,circle,
-        scale=0.875,
-        fit to=tree]{};
-        }
-            [\tsc{deix}]
-            [\tsc{refP}
-                [\tsc{ref2}]
-                [\tsc{ref1}]
-            ]
-        ]
-        [\tsc{acc}P,
-        tikz={
-        \node[label=below:\tit{n},
-        draw,circle,
-        scale=0.925,
-        fit to=tree]{};
-        }
-            [\tsc{f2}]
-            [\tsc{nom}P
-                [\tsc{f1}]
-                [\tsc{num}P
-                    [\tsc{num}]
-                    [\tsc{m}P
-                        [\tsc{m}]
-                        [\tsc{n}P
-                            [\tsc{n}]
-                            [\tsc{persP}
-                                [\tsc{pers}]
-                            ]
-                        ]
-                    ]
-                ]
-            ]
-        ]
-    ]
-]
-\end{forest}
-
-and German head:
-
-\begin{forest} boom
-[, s sep=30mm
-    [\tsc{deix}P,
-    tikz={
-    \node[label=below:\tit{e},
-    draw,circle,
-    scale=0.875,
-    fit to=tree]{};
-    }
-        [\tsc{deix}]
-        [\tsc{refP}
-            [\tsc{ref2}]
-            [\tsc{ref1}]
-        ]
-    ]
-    [\tsc{nom}P,
-    tikz={
-    \node[label=below:\tit{r},
-    draw,circle,
-    scale=0.9,
-    fit to=tree]{};
-    }
-        [\tsc{f1}]
-        [\tsc{num}P
-            [\tsc{num}]
-            [\tsc{m}P
-                [\tsc{m}]
-                [\tsc{n}P
-                    [\tsc{n}]
-                    [\tsc{persP}
-                        [\tsc{pers}]
-                    ]
-                ]
-            ]
-        ]
-    ]
-]
-\end{forest}
-
-\section{Polish deletion}
-
-
-Polish relative pronoun
-
-\begin{forest} boom
-    [, s sep=40mm
-        [XP,
-        tikz={
-        \node[label=below:\tit{k},
-        draw,circle,
-        scale=0.875,
-        fit to=tree]{};
-        }
-            [XP]
-            [\tsc{persP}
-                [\tsc{pers}]
-                [\tsc{deix}P
-                    [\tsc{deix}]
-                    [\tsc{refP}
-                        [\tsc{ref2}]
-                        [\tsc{ref1}]
-                    ]
-                ]
-            ]
-        ]
-        [, s sep=30mm
-            [\tsc{m}P,
-            tikz={
-            \node[label=below:\tit{o},
-            draw,circle,
-            scale=0.925,
-            fit to=tree]{};
-            }
-                [\tsc{m}]
-                [\tsc{n}P
-                    [\tsc{n}]
-                ]
-            ]
-            [\tsc{dat}P,
-            tikz={
-            \node[label=below:\tit{mu},
-            draw,circle,
-            scale=0.925,
-            fit to=tree]{};
-            }
-                [\tsc{f3}]
-                    [\tsc{acc}P
-                    [\tsc{f2}]
-                    [\tsc{nom}P
-                        [\tsc{f1}]
-                        [\tsc{num}P
-                            [\tsc{num}]
-                        ]
-                    ]
-                ]
-            ]
-        ]
-    ]
-\end{forest}
-
-Polish head
-
-\begin{forest} boom
-    [, s sep=30mm
-        [\tsc{pers}P,
-        tikz={
-        \node[label=below:\tit{k},
-        draw,circle,
-        scale=0.875,
-        fit to=tree]{};
-        }
-            [\tsc{pers}]
-            [\tsc{deix}P
-                [\tsc{deix}]
-                [\tsc{refP}
-                    [\tsc{ref2}]
-                    [\tsc{ref1}]
-                ]
-            ]
-        ]
-        [, s sep=20mm
-            [\tsc{m}P,
-            tikz={
-            \node[label=below:\tit{o},
-            draw,circle,
-            scale=0.925,
-            fit to=tree]{};
-            }
-                [\tsc{m}]
-                [\tsc{n}P
-                    [\tsc{n}]
-                ]
-            ]
-            [\tsc{acc}P,
-            tikz={
-            \node[label=below:\tit{go},
-            draw,circle,
-            scale=0.925,
-            fit to=tree]{};
-            }
-                [\tsc{f2}]
-                [\tsc{nom}P
-                    [\tsc{f1}]
-                    [\tsc{num}P
-                        [\tsc{num}]
-                    ]
-                ]
-            ]
-        ]
-    ]
-\end{forest}
