--- a/d-vs-wh.tex
+++ b/d-vs-wh.tex
@@ -2,9 +2,9 @@
 
 \chapter{\tsc{d} vs. \tsc{wh}}\label{ch:relativization}
 
-So, we have seen that relative pronouns are sensitive to the internal case and to the external case. In this chapter we go back to what this means for the `head' in headless relatives. In headless relatives this head is namely missing. Like I said in the introduction, there are several ways of interpreting that.
+% So, we have seen that relative pronouns are sensitive to the internal case and to the external case. In this chapter we go back to what this means for the `head' in headless relatives. In headless relatives this head is namely missing. Like I said in the introduction, there are several ways of interpreting that.
 
-In this section I discuss the matter whether it is actually the relative pronoun or the head of the relative clause that surfaces in headless relatives. I argue that for Modern German it is always the relative pronoun in the relative clause that surfaces. This follows from the fact that Modern German has \tsc{wh}-pronouns as relative pronouns in its headless relatives. In Gothic and Old High German it is sometimes the relative pronoun and sometimes the (light) head of the relative clause that surfaces as relative pronoun. This is a consequence of the \tsc{d}-morphology of the relative pronoun in Old High German and Gothic.
+% In this section I discuss the matter whether it is actually the relative pronoun or the head of the relative clause that surfaces in headless relatives. I argue that for Modern German it is always the relative pronoun in the relative clause that surfaces. This follows from the fact that Modern German has \tsc{wh}-pronouns as relative pronouns in its headless relatives. In Gothic and Old High German it is sometimes the relative pronoun and sometimes the (light) head of the relative clause that surfaces as relative pronoun. This is a consequence of the \tsc{d}-morphology of the relative pronoun in Old High German and Gothic.
 
 I connect this behavior of Modern German headless relatives to the shape of its relative pronouns. Modern German has \tsc{wh}-pronouns as relative pronouns in headless relative constructions. In this section I show that it is a consequence of having \tsc{wh}-pronouns as relative pronouns that the internal case can only surface as winner in the case competition. The different behavior of Gothic and Old High German headless relatives follows from the \tsc{d}-pronoun these languages use as their relative pronouns.
 
@@ -15,37 +15,43 @@ In both types of languages, I analyze it as if there was a head, but it is phono
 
 \section{\tsc{wh}-relatives}
 
-I show in this section that even though the relative pronoun is sensitive to both the internal and external case, syntactically it is part of the relative clause. As a mechanism to also take the external case into account I introduce an external head.
+In this section I discuss headless relatives in Modern German. Modern German only allows the relative pronoun only to surface in the internal case, not in the external case. The relative pronoun used in headless relatives in this language is a \tsc{wh}-pronoun. I show in this section that syntactically it is part of the relative clause but that the relative pronoun is sensitive to both the internal and external case.
 
-Just like in Gothic and Old High German, the Modern German relative pronoun is sensitive to the internal and external case. Modern German differs crucially from Gothic and Old High German in that its headless relative are only grammatical when the internal case wins the case competition over the external case. In other words, the relative pronoun can only surface in the internal case, i.e. the case of the relative clause. However, one important fact still remains: the relative pronoun is sensitive to both cases: the internal case only surfaces when it is more complex than the external case. That means that somehow there needs to be access to the main clause case.
+Modern German differs crucially from Gothic and Old High German in that its headless relative are only grammatical when the internal case wins the case competition over the external case. In other words, the relative pronoun can only surface in the internal case, i.e. the case of the relative clause. This seems to indicate that the relative pronoun is part of the relative clause.
 
-Consider the example in \ref{ex:mg-dat-acc-wen}.
+Independent from these case facts, I provide three arguments why the headless relative pronoun in Modern German is part of the relative clause. The first one is extraposition in headless relatives, the second one is relative pronouns in general and the last one is \tsc{wh}-elements in general.
 
-\exg. *Ich vertraue wen \tbf{auch} \tbf{Maria} \tbf{mag}. \\
-I.\ac{nom} trust.1\ac{sg}\scsub{[dat]} \tsc{rel}.\ac{acc}.\tsc{an} also Maria.\ac{nom} like.3\ac{sg}\scsub{[acc]}.\\
-`I trust whoever Maria also likes.' \flushfill{adapted from \pgcitealt{vogel2001}{345}}\label{ex:mg-dat-acc-wen}
+The strongest argument for the headless relative pronoun being part of the relative clause comes from extraposition in headless relatives. In Modern German, it is possible to extrapose a clause (a CP), but not a noun phrase (DP). This is illustrated in \ref{ex:mg-extrapose-cp} and \ref{ex:mg-extrapose-dp}.
 
-First, let us look at the syntactic position of the relative pronoun. I provide three arguments why the headless relative pronoun is part of the relative clause (even though reference is made to the external case). The first one is extraposition in headless relatives, the second one is relative pronouns in general in Modern German and the last one is \tsc{wh}-elements in general in Modern German.
+The sentence in \ref{ex:mg-extrapose-cp-base} contains a clausal object, marked here in bold. This objects can be extraposed to the right edge of the clause, shown in \ref{ex:mg-extrapose-cp-moved}.
 
-The strongest argument for the headless relative pronoun being part of the relative clause comes from extraposition. Let us first look at headed relatives in Modern German. In Modern German, it is possible to extrapose a CP, but not a DP.
+\ex.\label{ex:mg-extrapose-cp}
+\ag. Mir ist \tbf{wie} \tbf{es} \tbf{dir} \tbf{geht} egal.\\
+ 1\tsc{sg}.\tsc{dat} is how it 2\tsc{sg}.\tsc{dat} goes {the same}\\
+ `I don't care how you are doing.' \flushfill{Modern German}\label{ex:mg-extrapose-cp-base}
+\bg. Mir is egal \tbf{wie} \tbf{es} \tbf{dir} \tbf{geht}.\\
+ 1\tsc{sg}.\tsc{dat} is {the same} how it 2\tsc{sg}.\tsc{dat} goes\\
+ `I don't care how you are doing.' \flushfill{Modern German}\label{ex:mg-extrapose-cp-moved}
 
-\ex.
-\a. Mir ist die Sache wichtig.
-\b. *Mir ist wichtig die Sache.
+This does not work with the same sentence, only replacing the sentential object by a simple noun phrase. blabla
 
-\ex.
-\a. Mir ist wie es dir geht wichtig.
-\b. Mir is wichtig wie es dir geht.
+\ex.\label{ex:mg-extrapose-dp}
+\ag. Mir ist \tbf{die} \tbf{Sache} egal.\\
+ 1\tsc{sg}.\tsc{dat} is that matter {the same}\\
+ `I don't care about that matter.' \flushfill{Modern German}\label{ex:mg-extrapose-dp-base}
+\bg. *Mir ist egal \tbf{die} \tbf{Sache}.\\
+ 1\tsc{sg}.\tsc{dat} is {the same} that matter\\
+ `I don't care about that matter.' \flushfill{Modern German}\label{ex:mg-extrapose-dp-moved}
 
-Now \ref{ex:extra-headless} shows two examples with headless relative clause extraposition. It illustrates that the \tsc{wh}-pronoun is at the left edge of the relative clause, and it is not where the head of the relative clause is.
+Now \ref{ex:extra-headless} shows two examples with headless relative clause extraposition. The relative clause can be extraposed, showing that the relative pronoun is part of a CP. If it was not in the CP, it could not be extraposed.
 
-\ex.\citet[185]{groos1981}\label{ex:extra-headless}
-\ag. Der Hans hat zurückgegeben, \tbf{was} \tbf{er} \tbf{gestohlen} \tbf{hat}.\\
+\ex.\label{ex:mg-extra}
+\ag. Der Hans hat \tbf{was} \tbf{er} \tbf{gestohlen} \tbf{hat} zurückgegeben.\\
+the Hans has what he stolen has returned\\
+`Hans has returned what he has stolen.' \citet[185]{groos1981}\label{ex:mg-extra-no}
+\bg. Der Hans hat zurückgegeben \tbf{was} \tbf{er} \tbf{gestohlen} \tbf{hat}.\\
 the Hans has returned what he stolen has\\
-\glt `Hans has returned what he has stolen.'\label{ex:extra-headless-good}
-\bg. *Der Hans hat \tbf{was} zurückgegeben, \tbf{er} \tbf{gestohlen} \tbf{hat}.\\
-the Hans has what returned he stolen has\\
-\glt `Hans has returned what he has stolen.'\label{ex:extra-headless-bad}
+`Hans has returned what he has stolen.' \citet[185]{groos1981}\label{ex:mg-extra-yes}
 
 The second argument comes from relative pronouns in headed relatives. Even though they are not headless relative pronouns, here you can see too that the head is a DP in the main clause and the relative pronoun is part of the relative clause.
 
@@ -76,11 +82,25 @@ Last, I consider \tsc{wh}-pronouns in Modern German in general. There are more \
 
 Conclusion: the \tsc{wh}-pronoun is part of the relative clause in Modern German. It appears at the left edge.
 
-With that in mind, let us look at the case competition facts again. The pattern is as follows: only an internal case can surface. Here the accusative wins over the nominative.
+%%relative pronoun cares about internal and external case
+However, just like in Gothic and Old High German, the Modern German relative pronoun is sensitive to the internal and external case.
+The internal case only surfaces when it is more complex than the external case.
 
-\exg. Uns besucht \tbf{wen} \tbf{Maria} \tbf{mag}.\\
+Consider the examples in \ref{ex:mg-internal}. In both sentences, the internal case is accusative, because the predicate in the relative clause \tit{mögen} `to like' takes accusative objects. The external case differs between the two sentences. In \ref{ex:mg-dat-acc-wen} the external case is dative, because the predicate \tit{vertrauen} `to trust' takes dative objects.  In \ref{ex:mg-nom-acc-wen}, the external case is nominative, because \tit{besuchen} `to visit' takes nominative subjects.
+
+\ex.\label{ex:mg-internal}
+\ag. *Ich vertraue wen \tbf{auch} \tbf{Maria} \tbf{mag}. \\
+I.\ac{nom} trust.1\ac{sg}\scsub{[dat]} \tsc{rel}.\ac{acc}.\tsc{an} also Maria.\ac{nom} like.3\ac{sg}\scsub{[acc]}.\\
+`I trust whoever Maria also likes.' \flushfill{adapted from \pgcitealt{vogel2001}{345}}\label{ex:mg-dat-acc-wen}
+\bg. Uns besucht \tbf{wen} \tbf{Maria} \tbf{mag}.\\
  we.\ac{acc} visit.3\ac{sg}\scsub{[nom]} \tsc{rel}.\ac{acc}.\tsc{an} Maria.\ac{nom} like.3\ac{sg}\scsub{[acc]}\\
- `Who visits us, Maria likes.' \flushfill{adapted from \pgcitealt{vogel2001}{343}}
+ `Who visits us, Maria likes.' \flushfill{adapted from \pgcitealt{vogel2001}{343}}\label{ex:mg-nom-acc-wen}
+
+The sentence in \ref{ex:mg-dat-acc-wen} is ungrammatical, and the one in \ref{ex:mg-nom-acc-wen} is not. The relative clauses in both sentences are identical case-wise, so the difference in ungrammaticality cannot lie there. The only observable differences are found in the main clause. The former sentence is ungrammatical, because the internal accusative case cannot win the case competition over the external dative. The latter sentence is grammatical, because the internal accusative case wins over the external nominative. The conclusion that can be drawn from this is that the relative pronoun in Modern German headless relatives cares about both the internal and the external case.
+
+In sum, even though the relative pronoun in Modern German headless relatives is always part of the relative clause, the relative pronoun also takes the external case into account. That means that the relative pronoun somehow needs to have access to the main clause case. I return to the matter of `somehow' later on in this section.
+
+%%%so the intuition
 
 This can be modelled as follows:
 
@@ -112,6 +132,8 @@ The structure shows an accusative in the relative clause. An \tsc{acc}P by defin
 
 We also understand that the other way around does not work: a nominative in the relative clause does not contain an accusative.
 
+%%two problems: somehow and polish
+
 Two problems arise:
 
 (1) how does this licensing take place? Normally we have a single DP satisfying the case of a single V. What is happening here?
@@ -125,6 +147,9 @@ Jan like.3\tsc{sg}\scsub{[acc]} \tsc{rel}.\tsc{dat}.\tsc{sg}.\tsc{an} ever tease
 \bg. Jan ufa \tbf{komu} \tbf{(kolwiek)} \tbf{wpuścil} \tbf{do} \tbf{domu}.\\
  Jan trust.3\tsc{sg}\scsub{[dat]} \tsc{rel}.\tsc{dat}.\tsc{sg}.\tsc{an} ever let.3\tsc{sg}\scsub{[acc]} to home\\
  `Jan trusts whoever he let into the house.'
+
+
+
 
 
 \subsection{The missing external head}
