--- a/two-attested-patterns.tex
+++ b/two-attested-patterns.tex
@@ -152,7 +152,7 @@ The relative pronoun \tit{wem} `\tsc{rel}.\ac{dat}.\tsc{an}' appears in the inte
 
 \exg. Ich {lade ein} \tbf{wem} \tbf{auch} \tbf{Maria} \tbf{vertraut}. \\
 I.\ac{nom} invite.1\tsc{sg}\scsub{[acc]} \tsc{rel}.\ac{dat}.\tsc{an} also Maria.\ac{nom} trust.3\tsc{sg}\scsub{[dat]}.\\
-`I invite whoever Maria also trusts.' \flushfill{adapted from \pgcitealt{vogel2001}{344}}\label{ex:mg-acc-dat}
+`I invite whoever Maria also trusts.' \flushfill{\ac{mg}, adapted from \pgcitealt{vogel2001}{344}}\label{ex:mg-acc-dat}
 
 Consider the example in \ref{ex:mg-nom-dat}. In this example, the internal case is dative and the external case is nominative.
 The internal case is dative. The predicate \tit{vertrauen} `to trust' takes dative objects.
@@ -161,7 +161,7 @@ The relative pronoun \tit{wem} `\tsc{rel}.\ac{dat}.\tsc{an}' appears in the inte
 
 \exg. Uns besucht \tbf{wem} \tbf{Maria} \tbf{vertraut}.\\
 we.\ac{acc} visit.3\ac{sg}\scsub{[nom]} \tsc{rel}.\ac{dat}.\tsc{an} Maria.\ac{nom} trust.3\ac{sg}\scsub{[dat]}\\
-`Who visits us, Maria trusts.' \flushfill{adapted from \pgcitealt{vogel2001}{343}}\label{ex:mg-nom-dat}
+`Who visits us, Maria trusts.' \flushfill{\ac{mg}, adapted from \pgcitealt{vogel2001}{343}}\label{ex:mg-nom-dat}
 
 Consider the example in \ref{ex:mg-nom-acc}. In this example, the internal case is accusative and the external case is nominative.
 The internal case is accusative. The predicate \tit{mögen} `to like' takes accusative objects.
@@ -170,7 +170,7 @@ The relative pronoun \tit{wen} `\tsc{rel}.\ac{acc}.\tsc{an}' appears in the inte
 
 \exg. Uns besucht \tbf{wen} \tbf{Maria} \tbf{mag}.\\
  we.\ac{acc} visit.3\ac{sg}\scsub{[nom]} \tsc{rel}.\ac{acc}.\tsc{an} Maria.\ac{nom} like.3\ac{sg}\scsub{[acc]}\\
- `Who visits us, Maria likes.' \flushfill{adapted from \pgcitealt{vogel2001}{343}}\label{ex:mg-nom-acc}
+ `Who visits us, Maria likes.' \flushfill{\ac{mg}, adapted from \pgcitealt{vogel2001}{343}}\label{ex:mg-nom-acc}
 
 External is ungrammatical.
 
@@ -182,7 +182,7 @@ This is ungrammatical in German: only the internal case can win.
 
 \exg. *Ich vertraue wem \tbf{auch} \tbf{Maria} \tbf{mag}. \\
 I.\ac{nom} trust.1\ac{sg}\scsub{[dat]} \tsc{rel}.\ac{dat}.\tsc{an} also Maria.\ac{nom} like.3\ac{sg}\scsub{[acc]}.\\
-`I trust whoever Maria also likes.' \flushfill{adapted from \pgcitealt{vogel2001}{345}}\label{ex:mg-dat-acc}
+`I trust whoever Maria also likes.' \flushfill{\ac{mg}, adapted from \pgcitealt{vogel2001}{345}}\label{ex:mg-dat-acc}
 
 Consider the example in \ref{ex:mg-dat-nom}. In this example, the internal case is nominative and the external case is dative.
 The internal case is nominative. The predicate \tit{mögen} `to like' takes nominative subjects.
@@ -192,7 +192,7 @@ This is ungrammatical in German: only the internal case can win.
 
 \exg. *Ich vertraue, wem \tbf{Hitchcock} \tbf{mag}.\\
 I.\ac{nom} trust.1\ac{sg}\scsub{[dat]} \tsc{rel}.\ac{dat}.\tsc{an} Hitchcock.\ac{acc} like.3\ac{sg}\scsub{[nom]}\\
-`I trust who likes Hitchcock.' \flushfill{adapted from \pgcitealt{vogel2001}{345}}\label{ex:mg-dat-nom}
+`I trust who likes Hitchcock.' \flushfill{\ac{mg}, adapted from \pgcitealt{vogel2001}{345}}\label{ex:mg-dat-nom}
 
 Consider the example in \ref{ex:mg-acc-nom}. In this example, the internal case is nominative and the external case is accusative.
 The internal case is nominative. The predicate \tit{sein} `to be' takes nominative subjects.
@@ -202,7 +202,7 @@ This is ungrammatical in German: only the internal case can win.
 
 \exg. *Ich {lade ein}, wen \tbf{mir} \tbf{sympathisch} \tbf{ist}.\\
 I.\ac{nom} invite.1\ac{sg}\scsub{[acc]} \tsc{rel}.\ac{acc}.\tsc{an} I.\ac{dat} nice be.3\ac{sg}\scsub{[nom]}\\
-`I invite who I like.' \flushfill{adapted from \pgcitealt{vogel2001}{344}}\label{ex:mg-acc-nom}
+`I invite who I like.' \flushfill{\ac{mg}, adapted from \pgcitealt{vogel2001}{344}}\label{ex:mg-acc-nom}
 
 To summarize
 
